# fsi-ai-agents

./: .gitignore  CONTROL-INTEGRITY-CHANGELOG.md  ENTERPRISE-PLATFORM.md  README.md  SOLUTION-FIELD-GUIDE.md
01-financial-crime-investigation-agent/: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  railway.toml  requirements.txt
02-aml-tms-enhancement-agent/: .env.example  Dockerfile  Dockerfile.backend  README.md  app.py  docker-compose.yml  railway.toml  requirements.txt
03-kyc-cdd-perpetual-agent/: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
04-fraud-detection-agent/: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  railway.toml  requirements.txt
05-wealth-rm-copilot/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  railway.toml  requirements.txt
06-regulatory-change-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  railway.toml  requirements.txt
07-trading-surveillance-agent/: .dockerignore  .env.example  .gitignore  (+4 more)
platform_core/: pyproject.toml
platform_core/fsi_agent_platform/: __init__.py  auth.py  llm_factory.py  pii.py  secrets.py  tracing.py
platform_core/fsi_agent_platform/connectors/: README.md  __init__.py  base.py  factory.py  fixtures.py  live.py
platform_core/fsi_agent_platform/mcp_gateway/: README.md  __init__.py  audit.py  errors.py  gateway.py  policy.py  tokens.py
platform_core/tests/: test_agent01_gateway_adoption.py  test_connectors.py  test_mcp_gateway.py  test_platform.py
(+541 files in other folders)
